--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Food Restaurant</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
+  <title>Document</title>
 </head>
 <body>
- 
- <script src="./src/index.js"></script>
+
+  
+  
+  
+  
+  
+  <script src="./src/index.js"></script>
+  
 </body>
 </html>
+
